fix: Make dropdown menu items readable

--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -118,7 +118,7 @@ img {
 
 .navbar a {
     font-size: 16px;
-    color: black;
+    color: white;
     text-align: center;
     text-decoration: none;
 
